# MALLARD

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  HISTORY.md  README.md  alembic.ini  backup_metadata.sh  common_services.yml  deploy.py  docker-compose-dev.yml  docker-compose-no-ssl.yml  docker-compose.override.yml  docker-compose.yml  edge.yaml  gateway.yaml  imageToMinio.py  imageToSQL.py  init_db.sh  irods_metadata_test.py  pyproject.toml
config/examples/: example_config_auth.yaml  example_config_irods.yaml  example_config_sql_s3.yaml
config/local/: local_config.yaml
config/local/nginx/: nginx.conf
cookiecutter-docker/: cookiecutter.json
cookiecutter-docker/{{cookiecutter.config_name}}/: docker-compose.{{cookiecutter.config_name}}.yml
dockerfiles/: Dockerfile
docs/: developing.md
examples/: example_config_irods.yaml  example_config_sql_s3.yaml
mallard/: __init__.py  aiohttp_session.py  async_utils.py  cli_utils.py  config.py  config_default.yaml  config_view_mock.py  conftest.py  fastapi_utils.py  ffmpeg_utils.py  logger.py  main.py  type_helpers.py
mallard/backends/: __init__.py  async_db_mixin.py  backend_manager.py  injectable.py  irods_store.py
mallard/backends/metadata/: __init__.py  image_metadata_store.py  irods_image_metadata_store.py  irods_metadata_store.py  metadata_store.py  models.py  rows.py
mallard/backends/metadata/tests/: faker_providers.py  test_irods_image_metadata_store.py  test_irods_metadata_helpers.py
mallard/backends/objects/: __init__.py  irods_object_store.py  object_store.py
mallard/backends/objects/tests/: __init__.py  test_irods_object_store.py
mallard/backends/tests/: test_backend_manager.py
mallard/edge/: __init__.py  main.py  template_engine.py
mallard/edge/frontend/: .eslintrc.yml  .gitignore  api.json  jest.config.js  karma.conf.cjs  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
mallard/edge/frontend/css/: colors.scss  mallard.css  mallard.scss
mallard/edge/frontend/src/: api-client.ts  artifact-details.ts  artifact-display.ts  artifact-info-base.ts  artifact-thumbnail.ts  auth-callback.ts  autocomplete.ts  connected-artifact-thumbnail.ts  downloads.ts  elements.ts  file-list-display.ts  file-list.ts  file-uploader.ts  image-display.ts  index.ts  infinite-scrolling-element.ts  large-artifact-display.ts  large-image-display.ts  mallard-app.ts  metadata-card.ts  metadata-form.ts  notes-card.ts  page-manager.ts  search-box.ts  service-worker.ts  store.ts  thumbnail-grid-section.ts  thumbnail-grid-slice.ts  thumbnail-grid.ts  top-nav-bar.ts  types.ts  upload-slice.ts  uploader.ts  user-menu.ts  visibility-checking-container.ts  visibility_checking_container.ts
mallard/edge/frontend/static/: Larabie Fonts License.txt  (+1 more)
mallard/edge/templates/: auth_callback.html  base.html  details.html  globals.html  head.html  index.html  upload.html
mallard/gateway/: __init__.py  aiohttp_session.py  artifact_metadata.py  async_utils.py  authentication.py  config.py  config_default.yaml  configurable_worker.py  conftest.py  dependencies.py  fastapi_utils.py  main.py  schemas.py
mallard/gateway/backends/: __init__.py  backend_manager.py  irods_store.py  time_expiring_cache.py
mallard/gateway/routers/: common.py  conftest.py  dependencies.py
mallard/gateway/tests/: __init__.py  faker_providers.py  test_async_utils.py  test_authentication.py  test_fastapi_utils.py  test_schemas.py
mallard/routers/: images.py  images_models.py
mallard/routers/images/: __init__.py  endpoints.py  image_metadata.py  models.py
mallard/routers/tests/: __init__.py  faker_providers.py
mallard/tests/: faker_providers.py  test_async_utils.py  test_authentication.py  test_cli_utils.py  test_fastapi_utils.py  test_schemas.py
mallard/transcoder/: __init__.py  concurrency_limited_runner.py  ffmpeg.py  main.py
mallard/transcoder/routers/: __init__.py
mallard/transcoder/tests/: __init__.py  test_concurrency_limited_runner.py  test_ffmpeg.py
old/: addImages.py  imageToMinio.py  imageToSQL.py  searchImages.py  searchMinio.py  searchSQL.py
testing_framework/: .coveragerc  pytest.ini  pytest_local.ini
(+114 files in other folders)
