[tool.poetry]
name = "image_object_storage"
version = "0.2"
description = "Searchable database of image data for HTP applications."
authors = ["Daniel Petti <djpetti@gmail.com>", "Justin Hong <wjtw9802@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
minio = "^7.0.1"
mysql-connector = "^2.2.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest_mock = "^3.3.1"
pytest_cov = "^2.10.1"
pytest_black = "^0.3.11"
pytest_flake8 = "^1.0.6"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist')"

[tool.kedro]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
