[tool.poetry]
name = "mallard"
version = "0.3.2"
description = "MAchine Learning Large ARtifact Database"
authors = ["Daniel Petti <djpetti@gmail.com>", "Justin Hong <wjtw9802@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
pydantic = "^1.7.3"
fastapi = "^0.75.1"
uvicorn = { extras = ["standard"], version = "^0.13.3" }
python-multipart = "^0.0.5"
Pillow = "^8.1.0"
confuse = "^1.4.0"
loguru = "^0.5.3"
exifread = "^2.3.2"
aioitertools = "^0.7.1"
python-irodsclient = "^0.8.6"
tenacity = "^6.3.1"
aiohttp = "^3.7.3"
gunicorn = "^20.0.4"
aiofiles = "^0.6.0"
jinja2 = "^3.1.1"
aiobotocore = "^1.3.0"
SQLAlchemy = "^1.4.15"
# Aiomysql hasn't released a new version since Nov 2021, and I need a fix
# for this issue (https://github.com/aio-libs/aiomysql/pull/660) that was merged
# in Jan 2022. That's why I'm pulling a specific commit.
aiomysql = { git = "https://github.com/aio-libs/aiomysql.git", branch = "42532c8" }
alembic = "^1.6.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest_mock = "^3.3.1"
pytest-asyncio = "^0.14.0"
pytest_faker = "^2.0.0"
python-dateutil = "^2.8.1"
requests = "^2.25.1"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"
aiosqlite = "^0.17.0"
PyMySQL = ">=0.9"
Faker = "^13.3.4"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist')"

[tool.kedro]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
